# obsidian-smart-workflow

./: .gitignore  README.md  README_CN.md  esbuild.config.mjs  manifest.json  package.json  pnpm-lock.yaml  styles.css  versions.json
.github/workflows/: README.md  build-rust.yml  release.yml
pty-server/: Cargo.toml  README.md
pty-server/src/: main.rs  pty_session.rs  server.rs  shell.rs
rust-servers/: Cargo.toml  stderr.txt  stdout.txt
rust-servers/pty-server/: Cargo.toml  README.md
rust-servers/voice-server/: Cargo.toml
rust-servers/voice-server/src/: main.rs  server.rs
rust-servers/voice-server/src/asr/: mod.rs
rust-servers/voice-server/src/audio/: mod.rs
scripts/: README.md  build-rust.js  install-dev.js  package-plugin.js  quick-install.js
src/: main.ts
src/i18n/: types.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/services/ai/: connectionTester.ts  index.ts  modelContextLengths.ts  modelFetcher.ts  requestBuilder.ts
src/services/automation/: autoArchiveService.ts
src/services/config/: configManager.ts
src/services/naming/: aiService.ts  fileNameService.ts
src/services/server/: serverManager.ts  types.ts
src/services/terminal/: binaryManager.ts  platformUtils.ts  terminalInstance.ts  terminalService.ts
src/services/translation/: index.ts  languageDetector.ts  translationService.ts
src/services/writing/: index.ts  writingService.ts
src/settings/: settings.ts  settingsTab.ts  types.ts
src/settings/modals/: deleteModelModal.ts  index.ts  (+3 more)
tests/: ai-client-validation.ts  ai-components-validation.ts  test-pty-server.js
(+16 files in other folders)
