[package]
name = "pty-server"
version = "1.0.0"
edition = "2021"

[dependencies]
portable-pty = "0.9"
# Only enable necessary tokio features to reduce initialization overhead
tokio = { version = "1", features = ["rt", "net", "sync", "signal", "macros"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

# 注意: release profile 已移至 workspace 根目录的 Cargo.toml
