[package]
name = "voice-server"
version = "1.0.0"
edition = "2021"
description = "Voice input server for obsidian-smart-workflow"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "net", "sync", "signal", "macros", "time"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Audio recording
cpal = "0.15"

# Audio playback (for beep sounds)
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Audio encoding
hound = "3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for ASR APIs
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "1.0"

# Base64 encoding for audio data
base64 = "0.22"

# Async trait support
async-trait = "0.1"

# 注意: release profile 已移至 workspace 根目录的 Cargo.toml
